--- a/Dominando JQuery/2- Manipulando dimensões dinamicamente/index.html
+++ b/Dominando JQuery/2- Manipulando dimensões dinamicamente/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Variáveis com JQuery</title>
+    <title>Manipulando dimensões dinamicamente</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-    <div class="box"><h2>Olá Mundo</h2></div><!--BOX-->
+    <div class="box">
+        <h2>Olá Mundo</h2>
+        <h2>Olá Mundo</h2>
+    </div>
 
     <script src="js/jquery.js"></script>
     <script src="js/functions.js"></script>
