--- a/Dominando JQuery/4 - Manipulando a posição no DOM/index.html
+++ b/Dominando JQuery/4 - Manipulando a posição no DOM/index.html
@@ -8,12 +8,18 @@
 </head>
 <body>
 
-    <div class="box"></div><!--BOX-->
-    <div class="box2"></div><!--BOX2-->
+    <div class="box">
+        <h2>Loren Ipsum</h2>
+        <p>Meu conteúdo</p>
+        <div></div>
+    </div><!--BOX-->
+    
+    <div class="box">
+        <h2>Loren Ipsum</h2>
+        <p>Meu conteúdo</p>
+        <div></div>
+    </div><!--BOX-->
 
-    <!--<textarea></textarea>-->
-    <input type="text">
-    <input type="button" value="Enviar">
 
     <script src="js/jquery.js"></script>
     <script src="js/functions.js"></script>
