--- a/Dominando JQuery/13 - Expressões regulares/index.html
+++ b/Dominando JQuery/13 - Expressões regulares/index.html
@@ -13,9 +13,9 @@
         <div class="form">
             <div class="close">X</div><!--CLOSE-->
             <form id="form1">
-                <input type="text" name="nome" placeholder="*Nome Completo" />
-                <input type="text" name="tel" placeholder="*Telefone" />
-                <input type="text" name="email" placeholder="*E-mail" />
+                <input required type="text" name="nome" placeholder="*Nome Completo" />
+                <input required type="text" name="tel" placeholder="*Telefone" />
+                <input required type="text" name="email" placeholder="*E-mail" />
                 <input type="submit" name="acao" value="Cadastrar" />
             </form>
         </div><!--FORM-->
