--- a/Dominando JQuery/15 - Navegação sem atualizar e API JQuery/contato.html
+++ b/Dominando JQuery/15 - Navegação sem atualizar e API JQuery/contato.html
@@ -1,4 +1,4 @@
-<div class="box">
+<div style="display: none;">
     <h2>Página Contato</h2>
     <p>Estou na página de contato do meu site</p>
 </div>
