--- a/Dominando JQuery/15 - Navegação sem atualizar e API JQuery/home.html
+++ b/Dominando JQuery/15 - Navegação sem atualizar e API JQuery/home.html
@@ -1,4 +1,4 @@
-<div class="box">
+<div style="display: none;">
     <h2>Página Inicial</h2>
     <p>Estou na página inicial do meu site</p>
 </div>
