--- a/Dominando JQuery/17 - Criando slider do zero responsivo/index.html
+++ b/Dominando JQuery/17 - Criando slider do zero responsivo/index.html
@@ -15,6 +15,11 @@
         <img src="image/img2.jpg">
         <img src="image/img3.jpg">
 
+        <div class="bullets-nav">
+
+        </div><!--Bullets_Nav-->
+        <div class="clear"></div>
+
     </div><!--Slider-->
  
 
